apps/website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - name: nginx
          image: ghcr.io/andresfelipemendez/andresfelipemendez.github.io:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "64Mi"
              cpu: "50m"
